{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "GameControls",
            "id": "40643f5c-2362-4ae7-b5ff-994684b9d539",
            "actions": [
                {
                    "name": "CraftingMode",
                    "type": "Button",
                    "id": "9c2a8624-080c-4a68-a517-e190d994e9a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "99ce2f5e-2c4f-4e27-8616-7e9593fb230b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "60c19b2b-2828-4043-8d0c-35a6a7d99199",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75fc1ffd-5bb4-4c44-86b4-86cd91156ede",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CraftingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48a74933-af63-4f99-80ce-246c569e8444",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d22957a-192d-4a40-b8a6-698e0b807e3f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}